// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@primer/styled-react exports 1`] = `
[
  "ActionList",
  "ActionMenu",
  "BaseStyles",
  "Box",
  "Breadcrumb",
  "Breadcrumbs",
  "Button",
  "CounterLabel",
  "Dialog",
  "Flash",
  "FormControl",
  "Header",
  "Heading",
  "IconButton",
  "Label",
  "Link",
  "LinkButton",
  "merge",
  "Overlay",
  "SegmentedControl",
  "Spinner",
  "sx",
  "Text",
  "TextInput",
  "theme",
  "themeGet",
  "ThemeProvider",
  "Timeline",
  "ToggleSwitch",
  "Token",
  "Tooltip",
  "Truncate",
  "UnderlineNav",
  "useColorSchemeVar",
  "useTheme",
]
`;

exports[`@primer/styled-react/deprecated exports 1`] = `
[
  "ActionList",
  "Dialog",
  "Octicon",
  "TabNav",
  "Tooltip",
]
`;

exports[`@primer/styled-react/experimental exports 1`] = `
[
  "Dialog",
  "Table",
  "Tooltip",
]
`;
